--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     display: flex;
     color:rgb(255, 255, 255);
     height: 10rem;
-    background-color: rgb(126 142 92);
+    background-color: rgb(84, 100, 51);
 
     border-radius: 1rem;
     margin-top: 4rem;
